Fixed spacing on site-wide social buttons.

--- a/sites/all/modules/dosomething/dosomething_panels/plugins/layouts/landings/landings.sass
+++ b/sites/all/modules/dosomething/dosomething_panels/plugins/layouts/landings/landings.sass
@@ -79,7 +79,7 @@
   .pane-dosomething-blocks-dosomething-social-node-buttons
     width: 100%
   .facebook-plugin
-    width: 79px
+    width: 50px
   .pane-dosomething-blocks-dosomething-facepile-general
     padding-top: 12px
     width: 100%
