--- a/sites/all/themes/doit/css/style.css
+++ b/sites/all/themes/doit/css/style.css
@@ -4904,7 +4904,7 @@ comments.fb_iframe_widget {
   margin-top: 0;
 }
 .social-plugin-wrapper .twitter-plugin {
-  margin: 0 22px;
+  margin: 0 12px;
   width: 55px;
 }
 
