--- a/sites/all/themes/doit/sass/partials/07-layout-design/social-services/_social-plugins.sass
+++ b/sites/all/themes/doit/sass/partials/07-layout-design/social-services/_social-plugins.sass
@@ -32,7 +32,7 @@
     .stBubble
       margin-top: 0
   .twitter-plugin
-    margin: 0 22px
+    margin: 0 12px
     width: 55px
 
 // Width for facebook like dialog getting cut in chrome
